--- a/Functional_Group/Functional_Group_Models.Rmd
+++ b/Functional_Group/Functional_Group_Models.Rmd
@@ -104,7 +104,7 @@ shrub <- cwm_functional %>%
 
 #### CWMs with interaction between climate, treatment, and functional group
 
-##### leaf area
+##### 1. leaf area
 ```{r}
 #leaf area is very skewed:
 ggplot(cwm_functional, aes(x = weighted_la)) +
@@ -178,7 +178,7 @@ emmeans(funct_la, pairwise ~ climate | functional_group)
 # LA_funct_sig_pairs
 
 ```
-##### specific leaf area
+##### 2. specific leaf area
 ```{r}
 #leaf area is very skewed:
 ggplot(cwm_functional, aes(x = weighted_sla)) +
@@ -230,7 +230,7 @@ emmeans(funct_sla, pairwise ~ treatment | functional_group)
 emmeans(funct_sla, pairwise ~ climate | functional_group)
 
 ```
-##### ldmc
+##### 3. ldmc
 ```{r}
 cwm_functional <- cwm_functional %>% 
   mutate(log_ldmc = log(weighted_ldmc))
@@ -257,7 +257,7 @@ emmeans(funct_ldmc, pairwise ~ treatment | functional_group)
 emmeans(funct_ldmc, pairwise ~ climate | functional_group)
 
 ```
-##### lnc
+##### 4. lnc
 ```{r}
 # funct_n <- glm(data = cwm_functional, weighted_n ~ climate * treatment * functional_group, family = gaussian, na.action = na.fail)
 # dredge(funct_n)
@@ -293,7 +293,7 @@ shapiro.test(residuals(funct_n)) # normal
 # emmeans(funct_n, pairwise ~ climate | functional_group)
 
 ```
-##### seed mass
+##### 5. seed mass
 ```{r}
 # # untransformed with gaussian
 # funct_seed_mass <- glm(data = cwm_functional, weighted_seed_mass ~ climate * treatment * functional_group, family = gaussian, na.action = na.fail)
@@ -338,7 +338,8 @@ shapiro.test(residuals(funct_seed_mass)) # normal
 # emmeans(funct_seed_mass, pairwise ~ functional_group)
 
 ```
-##### Best-Fit Model Table
+
+#### Best-Fit Model Table
 ```{r}
 dredge_funct_la <- as.data.frame(dredge(funct_la)) %>%
   filter(AICc == min(AICc)) %>% 
@@ -403,7 +404,8 @@ pretty_table
 
 gtsave(data = pretty_table, filename = "Funct_Group_best_fit_table.png", path = "~/github/Tejon_Functional_Traits/Figures")
 ```
-##### AIC Supplement
+
+#### AIC Supplement
 ```{r}
 dredge_funct_la <- as.data.frame(dredge(funct_la)) %>%
   mutate(CWM = "Leaf Area (log(x+1))") %>% 
@@ -478,552 +480,3 @@ funct_cwm_aic_sup <- dredge_table %>%
 gtsave(data = funct_cwm_aic_sup, filename = "Funct_Group_AIC_Supp.png", path = "~/github/Tejon_Functional_Traits/Figures")
 ```
 
-##### EMM Graphs
-```{r}
-# color of arrows
-arrow_colors <- (rep(c("red", "orange", "blue"), 9))
-# arrow_colors <- (rep(c("red", "red", "red", "orange", "orange", "orange", "blue", "blue", "blue"), 3))
-
-funct_emm_plot <- function(emmeans) {
-  plot(emmeans, type = "response", by = NULL, CIs = FALSE, comparisons = TRUE, horizontal = FALSE, colors = "black") +
-    # geom_segment(aes_(y = ~the.emmean, yend = ~lcmpl, x = ~pri.fac, xend = ~pri.fac), 
-    #            arrow = arrow(length = ggplot2::unit(.07, "inches"), type = "closed"),
-    #            color ="black") +
-    # geom_segment(ggplot2::aes_(y = ~the.emmean, yend = ~rcmpl, x = ~pri.fac, xend = ~pri.fac),
-    #            arrow = arrow(length = ggplot2::unit(.07, "inches"), type = "closed"),
-    #            color = "black") +
-    # geom_point(aes_(fill = "black")) +
-    theme(legend.position = "none")
-}
-
-# The geom_segment() code to change the color of the arrows (by just adding in different arrows over the top) does not work this way becasue some of the arrows do not overlap the points
-
-```
-###### Seed Mass
-```{r}
-# method 1 for plotting back transformation: 
-# re-writing with the transformation in the model
-funct_seed_mass <- glm(data = cwm_functional, log(weighted_seed_mass) ~ climate + functional_group + climate:functional_group, na.action = na.fail)
-
-# use emmeans()
-funct_seed_mass_emm <- emmeans(funct_seed_mass, ~ climate * functional_group)
-
-
-# then plot with type = "response"
-
-seed_mass_plot_1 <- funct_emm_plot(funct_seed_mass_emm)+
-  facet_grid(. ~ functional_group, scales = "free", space = "free") +
-  scale_x_discrete(labels = rep(c("Arid", "Intermediate", "Mesic"), 9)) +
-  labs(title = "Seed Mass CWM by Functional Group", y = "Seed Mass (mg)", x = "Climate")
-
-# method 2 for plotting back transformation:
-# this uses the model that used the already transformed data
-funct_seed_mass <- glm(data = cwm_functional, log_seed_mass ~ climate + functional_group + climate:functional_group, na.action = na.fail)
-
-# updating with transformation information
-funct_seed_mass.rg <- update(ref_grid(funct_seed_mass), tran = "log")
-
-# plot
-seed_mass_plot_2 <- funct_emm_plot(funct_seed_mass.rg)+
-  facet_grid(. ~ functional_group, scales = "free", space = "free") +
-  scale_x_discrete(labels = rep(c("Arid", "Intermediate", "Mesic"), 9)) +
-  labs(title = "Seed Mass CWM by Functional Group", y = "Seed Mass (mg)", x = "Climate")
-
-seed_mass_plot_1
-seed_mass_plot_2
-
-# ggsave("funct_seed_mass_plot.png", path = "~/github/Tejon_Functional_Traits/Figures", width = 10, height = 7, bg = "transparent")
-```
-###### Specific Leaf Area
-```{r}
-# log(x+1) transformation
-# funct_sla <- glm(data = cwm_functional, log_plus_sla ~ climate + functional_group + treatment + climate:functional_group, family = gaussian, na.action = na.fail)
-
-funct_sla <- glm(data = cwm_functional, log(weighted_sla + 1) ~ climate + functional_group + treatment + climate:functional_group, family = gaussian, na.action = na.fail)
-
-funct_sla_emm <- emmeans(funct_sla, ~ climate + functional_group + treatment + climate:functional_group)
-
-emmeans(funct_sla, pairwise ~ climate + functional_group + treatment + climate:functional_group)
-
-# plot
-
-funct_emm_plot(funct_sla_emm) +
-  facet_grid(. ~ functional_group + climate, scales = "free", space = "free") +
-  aes(fill = as.factor(treatment)) +
-  scale_x_discrete(labels = rep(c("Open", "Partial", "Total"), 9)) +
-  labs(title = "Specific Leaf Area CWM by Functional Group", x = "Treatment") +
-  theme(panel.margin = unit(0, "lines"),
-        panel.border = element_rect(color = "black", fill = NA, size = 0.5),
-        panel.background = element_rect(fill = c("#E2F0D9", "#DEEBF7")))
-
-
-plot(funct_sla_emm, type = "response", by = NULL, CIs = FALSE, comparisons = TRUE, horizontal = FALSE, colors = "black") +
-    facet_grid(. ~ functional_group + climate, scales = "free", space = "free") +
-    aes(fill = as.factor(treatment)) +
-    scale_x_discrete(labels = rep(c("Open", "Partial", "Total"), 9)) +
-    labs(title = "Specific Leaf Area CWM by Functional Group", x = "Treatment") +
-    # theme(panel.margin = unit(0, "lines"),
-    #     panel.border = element_rect(color = "black", fill = NA, size = 0.5),
-    #     strip.background.x = element_rect(fill = c("#E2F0D9", "#DEEBF7")),
-    #     strip.text.x = element_blank()
-    #     ) + 
-    theme(legend.position = "none")
-  
-plot(funct_sla_emm, by = NULL, CIs = FALSE, comparisons = TRUE, horizontal = FALSE, colors = "black") +
-  facet_grid(. ~ functional_group + climate, scales = "free", space = "free", 
-             labeller = label_wrap_gen(multi_line=FALSE))
-
-plot(funct_sla_emm, by = NULL, CIs = FALSE, comparisons = TRUE, horizontal = FALSE, colors = "black") +
-  facet_grid(. ~ functional_group + climate, scales = "free", space = "free", 
-             labeller = label_wrap_gen(multi_line=FALSE),
-             labeller = as_labeller(c(
-               'forb, Arid' = "Forb", 'forb, Intermediate' = "Forb", 'Forb, Meisc' = "Forb", 
-               'grass, Arid' = "grass", 'grass, Intermediate' = "grass", 'grass, Meisc' = "shrub", 
-               'shrub, Arid' = "shrub", 'shrub, Intermediate' = "shrub", 'shrub, Meisc' = "shrub")))
-
-emmeans(funct_sla, pairwise ~ treatment)
-
-
-```
-###### Leaf Area
-```{r}
-funct_la_emm <- emmeans(funct_la, pairwise ~ treatment + climate + functional_group)
-
-# emmeans(funct_la, pairwise ~ treatment | climate | functional_group)
-
-funct_la_plot <- plot(la_emmeans, by = NULL, CIs = FALSE, comparisons = TRUE, horizontal = FALSE, colors = "darkgreen") +
-  facet_grid(. ~ functional_group + climate, scales = "free", space = "free") +
-  aes(fill = as.factor(treatment)) +
-   geom_segment(aes_(y = ~the.emmean, yend = ~lcmpl, x = ~pri.fac, xend = ~pri.fac), #copied from function's code on github
-               arrow = arrow(length = ggplot2::unit(.07, "inches"), type = "closed"),
-               color ="black") +
-  geom_segment(ggplot2::aes_(y = ~the.emmean, yend = ~rcmpl, x = ~pri.fac, xend = ~pri.fac),
-               arrow = arrow(length = ggplot2::unit(.07, "inches"), type = "closed"),
-               color = "black") +
-  geom_point(aes_(fill = "black")) +
-  # theme(axis.text.x = element_text(angle = 45, vjust = 0.5, hjust=1)) +
-  scale_x_discrete(labels = rep(c("Open", "Partial", "Total"), 9)) +
-  labs(title = "Leaf Area CWM by Functional Group") +
-    theme(legend.position = "none")
-
-funct_la_plot 
-
-# ggsave("funct_la_plot.png", path = "~/github/Tejon_Functional_Traits/Figures", width = 10, height = 7, bg = "transparent")
-
-
-```
-
-#### ggeffects Graphs
-```{r}
-ggeffects_colors <- c("#f46d43", "#fee090", "#74add1")
-
-# First try
-funct_la_plot <- plot(ggpredict(funct_la, terms = c("treatment", "climate", "functional_group")), colors = ggeffects_colors, facet = TRUE)
-funct_sla_plot <- plot(ggpredict(funct_sla, terms = c("treatment", "climate", "functional_group")), colors = ggeffects_colors,facet = TRUE)
-funct_ldmc_plot <- plot(ggpredict(funct_ldmc, terms = c("treatment", "climate", "functional_group")), colors = ggeffects_colors,facet = TRUE)
-funct_n_plot <- plot(ggpredict(funct_n, terms = c("treatment", "climate", "functional_group")), colors = ggeffects_colors,facet = TRUE)
-funct_seed_mass_plot <- plot(ggpredict(funct_seed_mass, terms = c("climate", "functional_group")), colors = ggeffects_colors,facet = TRUE)
-funct_group_CWM_emmeans <- grid.arrange(funct_la_plot, funct_sla_plot, funct_ldmc_plot, funct_n_plot, funct_seed_mass_plot)
-
-# ggsave("funct_group_CWM_emmeans.png", plot = funct_group_CWM_emmeans, path = "~/github/Tejon_Functional_Traits/Figures/ggeffects_graphs", height = 7, width = 10)
-
-# adding significance
-# creating a function
-funct_graph <- function(model, model_terms, title, y_lab, x_lab){
-  
-  predict <- ggpredict(model, terms = model_terms)
-  test <- as.data.frame(predict)
-  
-  ggplot(test, aes(facet, predicted, color = x)) +
-  geom_point(position = position_dodge(width=0.5)) +
-  geom_errorbar(aes(ymin = conf.low, ymax = conf.high), 
-                width = .25, 
-                size = .75,
-                position = position_dodge(width=0.5))+
-  scale_color_manual(values = ggeffects_colors) +
-  theme(
-    panel.background = element_rect(fill = "white",
-                                    colour = "white",
-                                    size = 0.5, linetype = "solid"),
-    panel.grid.major = element_line(size = 0.5, linetype = 'solid',
-                                    colour = "gray90"),
-    panel.grid.minor = element_line(size = 0.25, linetype = 'solid',
-                                    colour = "gray90"),
-    axis.line = element_line(size = 0.5, linetype = "solid",
-                             colour = "gray85"),
-    strip.background = element_rect(fill = "gray85"),
-    strip.text = element_text(colour = 'gray20')
-  ) +
-  labs(title = title, y = y_lab, x = x_lab) +
-  facet_grid(~ group)
-}
-
-# leaf area
-# making annotation files
-anno <- as.data.frame(summary(emmeans(funct_la, specs = pairwise ~ climate + treatment + functional_group))$contrasts) %>%
-  filter(p.value <= 0.05) %>% 
-  separate(col = contrast, into = c("plot_1", "plot_2"), sep = " - ") %>% 
-  separate(col = plot_1, into = c("plot_1_climate", "plot_1_treatment", "plot_1_funct_group"), sep = ",") %>% 
-  separate(col = plot_2, into = c("plot_2_climate", "plot_2_treatment", "plot_2_funct_group"), sep = ",") %>% 
-  filter(plot_1_funct_group == plot_2_funct_group & plot_1_climate == plot_2_climate) %>% 
-  rename(group = plot_2_funct_group, start = plot_1_treatment, end = plot_2_treatment, climate = plot_1_climate) %>%
-  mutate(label = ifelse(p.value > .05, "*",
-                        ifelse(p.value <= 0.01, "**",
-                               ifelse(p.value <= 0.001, "***", "****")))) %>% 
-  dplyr::select(group, start, end, label, climate)
-
-arid_anno <- anno %>% 
-  filter(climate == "Arid")
-int_anno <- anno %>% 
-  filter(climate == "Intermediate")
-mesic_anno <- anno %>% 
-  filter(climate == "Mesic")
-
-funct_graph(model = funct_la, 
-            model_terms = c("climate", "functional_group", "treatment"),
-            title = "Leaf Area CWM by Functional Group",
-            y_lab = "Predicted log(CWM Leaf Area + 1)",
-            x_lab = "Herbivore Treatment") +
-  geom_signif(
-        data = arid_anno,
-        aes(xmin = start, xmax = end, annotations = label, y_position = 4.25),
-        color = "#f46d43",
-      manual = TRUE) +
-  geom_signif(
-    data = int_anno,
-    aes(xmin = start, xmax = end, annotations = label, y_position = 4.5),
-    color = "#fee090",
-    manual = TRUE) +
-  geom_signif(
-    data = mesic_anno,
-    aes(xmin = start, xmax = end, annotations = label, y_position = 4.75),
-    color = "#74add1",
-    manual = TRUE)
-
-# specific leaf area
-# anno <- as.data.frame(summary(emmeans(funct_sla, specs = pairwise ~ climate + treatment + functional_group))$contrasts) %>%
-#   filter(p.value <= 0.05) %>% 
-#   separate(col = contrast, into = c("plot_1", "plot_2"), sep = " - ") %>% 
-#   separate(col = plot_1, into = c("plot_1_climate", "plot_1_treatment", "plot_1_funct_group"), sep = ",") %>% 
-#   separate(col = plot_2, into = c("plot_2_climate", "plot_2_treatment", "plot_2_funct_group"), sep = ",") %>% 
-#   filter(plot_1_funct_group == plot_2_funct_group & plot_1_climate == plot_2_climate) %>% 
-#   rename(group = plot_2_funct_group, start = plot_1_treatment, end = plot_2_treatment, climate = plot_1_climate) %>%
-#   mutate(label = ifelse(p.value > .05, "*",
-#                         ifelse(p.value <= 0.01, "**",
-#                                ifelse(p.value <= 0.001, "***", "****")))) %>% 
-#   dplyr::select(group, start, end, label, climate)
-
-funct_graph(model = funct_sla, 
-            model_terms = c("climate", "functional_group", "treatment"),
-            title = "Specific Leaf Area CWM by Functional Group",
-            y_lab = "Predicted log(CWM Specific Leaf Area + 1)",
-            x_lab = "Herbivore Treatment")
-
-# ldmc
-anno <- as.data.frame(summary(emmeans(funct_ldmc, specs = pairwise ~ climate + treatment + functional_group))$contrasts) %>%
-  filter(p.value <= 0.05) %>%
-  separate(col = contrast, into = c("plot_1", "plot_2"), sep = " - ") %>%
-  separate(col = plot_1, into = c("plot_1_climate", "plot_1_treatment", "plot_1_funct_group"), sep = ",") %>%
-  separate(col = plot_2, into = c("plot_2_climate", "plot_2_treatment", "plot_2_funct_group"), sep = ",") %>%
-  filter(plot_1_funct_group == plot_2_funct_group & plot_1_climate == plot_2_climate) %>%
-  rename(group = plot_2_funct_group, start = plot_1_treatment, end = plot_2_treatment, climate = plot_1_climate) %>%
-  mutate(label = ifelse(p.value > .05, "*",
-                        ifelse(p.value <= 0.01, "**",
-                               ifelse(p.value <= 0.001, "***", "****")))) %>%
-  dplyr::select(group, start, end, label, climate)
-anno
-
-arid_anno <- anno %>% 
-  filter(climate == "Arid")
-int_anno <- anno %>% 
-  filter(climate == "Intermediate")
-mesic_anno <- anno %>% 
-  filter(climate == "Mesic")
-
-funct_graph(model = funct_ldmc, 
-            model_terms = c("climate", "functional_group", "treatment"),
-            title = "Leaf Dry Matter Content CWM by Functional Group",
-            y_lab = "Predicted log(CWM Leaf Dry Matter Content)",
-            x_lab = "Herbivore Treatment") +
-  geom_signif(
-        data = arid_anno,
-        aes(xmin = start, xmax = end, annotations = label, y_position = 4.25),
-        color = "#f46d43",
-      manual = TRUE) +
-  geom_signif(
-    data = int_anno,
-    aes(xmin = start, xmax = end, annotations = label, y_position = 4.5),
-    color = "#fee090",
-    manual = TRUE) +
-  geom_signif(
-    data = mesic_anno,
-    aes(xmin = start, xmax = end, annotations = label, y_position = 4.75),
-    color = "#74add1",
-    manual = TRUE)
-
-
-
-
-```
-
-#### sjPlot [NOT USING]
-```{r}
-# library(sjPlot)
-# 
-# plot_model(funct_la, type = "emm", terms = c("climate", "treatment", "functional_group"))
-# 
-# plot_model(funct_sla, type = "emm", terms = c("climate", "treatment", "functional_group"))
-```
-#### Individual Models: [NOT USING]
-#### a. grasses:
-##### i. leaf area
-```{r}
-grass_la <- glm(data = grass, weighted_la ~ climate * treatment, family = gaussian, na.action = na.fail)
-dredge(grass_la) # best model: trait ~ climate * treatment
-
-simulateResiduals(grass_la, plot= T) #good
-shapiro.test(residuals(grass_la)) #normal
-
-summary(grass_la)
-emmeans(grass_la, pairwise ~ climate)
-emmeans(grass_la, pairwise ~ treatment | climate)
-```
-##### ii. specific leaf area
-```{r}
-grass_sla <- glm(data = grass, weighted_sla ~ climate * treatment, family = gaussian, na.action = na.fail)
-dredge(grass_sla) # best model: trait ~ climate * treatment
-
-simulateResiduals(grass_sla, plot= T) # good
-shapiro.test(residuals(grass_sla)) # normal
-
-summary(grass_sla)
-emmeans(grass_sla, pairwise ~ climate)
-emmeans(grass_sla, pairwise ~ treatment | climate)
-```
-##### iii.ldmc
-```{r}
-grass_ldmc <- glm(data = grass, weighted_ldmc ~ climate * treatment, family = gaussian, na.action = na.fail)
-dredge(grass_ldmc) # best model: trait ~ climate + treatment
-grass_ldmc <- glm(data = grass, weighted_ldmc ~ climate + treatment, family = gaussian, na.action = na.fail)
-
-simulateResiduals(grass_ldmc, plot= T) # not good
-shapiro.test(residuals(grass_ldmc)) # not normal
-
-grass <- grass %>% 
-  mutate(log_ldmc = log(weighted_ldmc))
-
-grass_ldmc <- glm(data = grass, log_ldmc ~ climate * treatment, family = gaussian, na.action = na.fail)
-dredge(grass_ldmc) # best model: trait ~ climate
-grass_ldmc <- glm(data = grass, log_ldmc ~ climate, family = gaussian, na.action = na.fail)
-
-simulateResiduals(grass_ldmc, plot= T) # good
-shapiro.test(residuals(grass_ldmc)) # normal
-
-summary(grass_ldmc)
-emmeans(grass_ldmc, pairwise ~ climate)
-```
-##### iv. lnc
-```{r}
-grass_n <- glm(data = grass, weighted_n ~ climate * treatment, family = gaussian, na.action = na.fail)
-dredge(grass_n) # best model: trait ~ climate
-grass_n <- glm(data = grass, weighted_n ~ climate, family = gaussian, na.action = na.fail)
-
-simulateResiduals(grass_n, plot= T) # good
-shapiro.test(residuals(grass_n)) # normal
-
-summary(grass_n)
-emmeans(grass_n, pairwise ~ climate)
-```
-##### v. seed mass
-```{r}
-grass_seed_mass <- glm(data = grass, weighted_seed_mass ~ climate * treatment, family = gaussian, na.action = na.fail)
-boxcox(grass_seed_mass) # might be best to do ln transformation
-dredge(grass_seed_mass) # best model: trait ~ climate + treatment
-grass_seed_mass <- glm(data = grass, weighted_seed_mass ~ climate + treatment, family = gaussian, na.action = na.fail)
-
-simulateResiduals(grass_seed_mass, plot= T) # not good
-shapiro.test(residuals(grass_seed_mass)) # normal
-
-grass <- grass %>% 
-  mutate(log_seed_mass = log(weighted_seed_mass)) %>% 
-  mutate(ln_seed_mass = log10(weighted_seed_mass)) %>% 
-  mutate(sqrt_seed_mass = sqrt(weighted_seed_mass))
-
-grass_seed_mass <- glm(data = grass, log_seed_mass ~ climate * treatment, family = gaussian, na.action = na.fail)
-dredge(grass_seed_mass) # best model: trait ~ climate
-grass_seed_mass <- glm(data = grass, log_seed_mass ~ climate, family = gaussian, na.action = na.fail)
-
-simulateResiduals(grass_seed_mass, plot= T) # ok?
-shapiro.test(residuals(grass_seed_mass)) # not normal
-
-grass_seed_mass <- glm(data = grass, ln_seed_mass ~ climate * treatment, family = gaussian, na.action = na.fail)
-dredge(grass_seed_mass) # best model: trait ~ climate
-grass_seed_mass <- glm(data = grass, ln_seed_mass ~ climate, family = gaussian, na.action = na.fail)
-
-simulateResiduals(grass_seed_mass, plot= T) # ok?
-shapiro.test(residuals(grass_seed_mass)) # not normal
-
-grass_seed_mass <- glm(data = grass, sqrt_seed_mass ~ climate * treatment, family = gaussian, na.action = na.fail)
-dredge(grass_seed_mass) # best model: trait ~ climate + treatment
-grass_seed_mass <- glm(data = grass, sqrt_seed_mass ~ climate + treatment, family = gaussian, na.action = na.fail)
-
-simulateResiduals(grass_seed_mass, plot= T) # not ok
-shapiro.test(residuals(grass_seed_mass)) # normal
-
-# gamma distribution worked all along
-grass_seed_mass <- glm(data = grass, weighted_seed_mass ~ climate * treatment, family = Gamma, na.action = na.fail)
-dredge(grass_seed_mass) # best model: trait ~ climate + treatment
-grass_seed_mass <- glm(data = grass, weighted_seed_mass ~ climate + treatment, family = Gamma, na.action = na.fail)
-
-simulateResiduals(grass_seed_mass, plot= T) # good
-shapiro.test(residuals(grass_seed_mass)) # normal
-
-summary(grass_seed_mass)
-emmeans(grass_seed_mass, pairwise ~ climate)
-emmeans(grass_seed_mass, pairwise ~ treatment | climate)
-```
-#### b. forbs
-##### i. la
-```{r}
-forb_la <- glm(data = forb, log_la ~ climate * treatment, family = gaussian, na.action = na.fail)
-dredge(forb_la) # best model is climate + treatment
-forb_la <- glm(data = forb, log_la ~ climate + treatment, family = gaussian, na.action = na.fail)
-
-simulateResiduals(forb_la, plot= T) # ok
-shapiro.test(residuals(forb_la)) #normal
-
-summary(forb_la)
-emmeans(forb_la, pairwise ~ climate)
-emmeans(forb_la, pairwise ~ treatment | climate)
-```
-##### ii. sla
-```{r}
-forb_sla <- glm(data = forb, weighted_sla ~ climate * treatment, family = gaussian, na.action = na.fail)
-dredge(forb_sla) # best model is only climate
-forb_sla <- glm(data = forb, weighted_sla ~ climate, family = gaussian, na.action = na.fail)
-
-simulateResiduals(forb_sla, plot= T) # ok
-shapiro.test(residuals(forb_sla)) # not normal
-
-forb_sla <- glm(data = forb, weighted_sla ~ climate * treatment, family = Gamma, na.action = na.fail)
-dredge(forb_sla) # best model: trait ~ climate
-forb_sla <- glm(data = forb, weighted_sla ~ climate, family = Gamma, na.action = na.fail)
-
-simulateResiduals(forb_sla, plot= T) # ok
-shapiro.test(residuals(forb_sla)) # normal
-
-summary(forb_sla)
-emmeans(forb_sla, pairwise ~ climate)
-```
-##### iii. ldmc
-```{r}
-forb_ldmc <- glm(data = forb, weighted_ldmc ~ climate * treatment, family = gaussian, na.action = na.fail)
-dredge(forb_ldmc) # best model: trait ~ treatment
-forb_ldmc <- glm(data = forb, weighted_ldmc ~ treatment, family = gaussian, na.action = na.fail)
-
-simulateResiduals(forb_ldmc, plot= T) # ok
-shapiro.test(residuals(forb_ldmc)) # normal
-
-summary(forb_ldmc)
-emmeans(forb_ldmc, pairwise ~ treatment)
-```
-##### iv.lnc
-```{r}
-forb_leaf_n <- glm(data = forb, weighted_n ~ climate * treatment, family = gaussian, na.action = na.fail)
-dredge(forb_leaf_n) # best model: trait ~ climate
-forb_leaf_n <- glm(data = forb, weighted_n ~ climate, family = gaussian, na.action = na.fail)
-
-simulateResiduals(forb_leaf_n, plot= T) # ok
-shapiro.test(residuals(forb_leaf_n)) # normal
-
-summary(forb_leaf_n)
-emmeans(forb_leaf_n, pairwise ~ climate)
-```
-##### v.seed mass
-```{r}
-forb_seed_mass <- glm(data = forb, weighted_seed_mass ~ climate * treatment, family = gaussian, na.action = na.fail)
-dredge(forb_seed_mass) # best model: trait ~ climate * treatment
-
-simulateResiduals(forb_seed_mass, plot= T) # not good
-shapiro.test(residuals(forb_seed_mass)) # not normal
-
-forb_seed_mass <- glm(data = forb, weighted_seed_mass ~ climate * treatment, family = Gamma, na.action = na.fail)
-dredge(forb_seed_mass) # best model: trait ~ climate * treatment
-
-simulateResiduals(forb_seed_mass, plot= T) # ok
-shapiro.test(residuals(forb_seed_mass)) # not normal
-
-forb <- forb %>% 
-  mutate(log_seed_mass = log(weighted_seed_mass))
-
-forb_seed_mass <- glm(data = forb, log_seed_mass ~ climate * treatment, family = gaussian, na.action = na.fail)
-dredge(forb_seed_mass) # best model: trait ~ climate
-forb_seed_mass <- glm(data = forb, log_seed_mass ~ climate, family = gaussian, na.action = na.fail)
-
-simulateResiduals(forb_seed_mass, plot= T) # ok
-shapiro.test(residuals(forb_seed_mass)) # normal
-
-summary(forb_seed_mass)
-emmeans(forb_seed_mass, pairwise ~ climate)
-```
-#### c. shrubs
-##### i.la
-- what do you do when residuals are normal but the residual vs. predicted plot looks terrible?
-```{r}
-shrub_la <- glm(data = shrub, weighted_la ~ climate * treatment, family = gaussian, na.action = na.fail)
-dredge(shrub_la) # best model: trait ~ climate + treatment
-shrub_la  <- glm(data = shrub, weighted_la ~ climate + treatment, family = gaussian, na.action = na.fail)
-
-simulateResiduals(shrub_la, plot= T) # very bad
-shapiro.test(residuals(shrub_la)) # normal
-
-summary(shrub_la)
-emmeans(shrub_la, pairwise ~ climate)
-```
-##### ii.sla
-```{r}
-shrub_sla <- glm(data = shrub, weighted_sla ~ climate * treatment, family = gaussian, na.action = na.fail)
-dredge(shrub_sla) # best model: trait ~ 1
-shrub_sla  <- glm(data = shrub, weighted_sla ~ 1, family = gaussian, na.action = na.fail)
-
-simulateResiduals(shrub_sla, plot= T) # fine
-shapiro.test(residuals(shrub_sla)) # normal
-
-```
-##### iii.ldmc
-```{r}
-shrub_ldmc <- glm(data = shrub, weighted_ldmc ~ climate * treatment, family = gaussian, na.action = na.fail)
-dredge(shrub_ldmc) # best model: trait ~ treatment; NEED TO DO MODEL AVERAGING
-shrub_ldmc  <- glm(data = shrub, weighted_ldmc ~ treatment, family = gaussian, na.action = na.fail)
-
-simulateResiduals(shrub_ldmc, plot= T) # fine
-shapiro.test(residuals(shrub_ldmc)) # normal
-
-summary(shrub_ldmc)
-emmeans(shrub_ldmc, pairwise ~ treatment)
-```
-##### iv.lnc
-```{r}
-shrub_n <- glm(data = shrub, weighted_n ~ climate * treatment, family = gaussian, na.action = na.fail)
-dredge(shrub_n) # NEED TO DO MODEL AVERAGING
-shrub_n  <- glm(data = shrub, weighted_n ~ treatment, family = gaussian, na.action = na.fail)
-
-simulateResiduals(shrub_n, plot= T) # fine
-shapiro.test(residuals(shrub_n)) # normal
-
-summary(shrub_n)
-emmeans(shrub_n, pairwise ~ treatment)
-```
-##### v.seed mass
-```{r}
-shrub_seed_mass <- glm(data = shrub, weighted_seed_mass ~ climate * treatment, family = gaussian, na.action = na.fail)
-dredge(shrub_seed_mass) # NEED TO DO MODEL AVERAGING
-shrub_seed_mass  <- glm(data = shrub, weighted_seed_mass ~ climate + treatment, family = gaussian, na.action = na.fail)
-
-simulateResiduals(shrub_seed_mass, plot= T) # bad
-shapiro.test(residuals(shrub_seed_mass)) # normal
-
-summary(shrub_n)
-emmeans(shrub_n, pairwise ~ treatment)
-
-```
