--- a/Functional_Group/funct_group_graphs.Rmd
+++ b/Functional_Group/funct_group_graphs.Rmd
@@ -9,7 +9,7 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-##### 1. EMM Graphs
+## 1. EMM Graphs
 ```{r}
 # color of arrows
 arrow_colors <- (rep(c("red", "orange", "blue"), 9))
@@ -29,7 +29,7 @@ funct_emm_plot <- function(emmeans) {
 # The geom_segment() code to change the color of the arrows (by just adding in different arrows over the top) does not work this way because some of the arrows do not overlap the points
 
 ```
-###### a. Seed Mass
+#### a. Seed Mass
 ```{r}
 # method 1 for plotting back transformation: 
 # re-writing with the transformation in the model
@@ -63,7 +63,7 @@ seed_mass_plot_2
 
 # ggsave("funct_seed_mass_plot.png", path = "~/github/Tejon_Functional_Traits/Figures", width = 10, height = 7, bg = "transparent")
 ```
-###### b. Specific Leaf Area
+#### b. Specific Leaf Area
 ```{r}
 # log(x+1) transformation
 # funct_sla <- glm(data = cwm_functional, log_plus_sla ~ climate + functional_group + treatment + climate:functional_group, family = gaussian, na.action = na.fail)
@@ -114,7 +114,7 @@ emmeans(funct_sla, pairwise ~ treatment)
 
 
 ```
-###### c. Leaf Area
+#### c. Leaf Area
 ```{r}
 funct_la_emm <- emmeans(funct_la, pairwise ~ treatment + climate + functional_group)
 
@@ -142,7 +142,7 @@ funct_la_plot
 
 ```
 
-#### 2. ggeffects Graphs
+## 2. ggeffects Graphs
 #### a. fist try
 ```{r}
 ggeffects_colors <- c("#f46d43", "#fee090", "#74add1")
@@ -158,9 +158,10 @@ funct_group_CWM_emmeans <- grid.arrange(funct_la_plot, funct_sla_plot, funct_ldm
 # ggsave("funct_group_CWM_emmeans.png", plot = funct_group_CWM_emmeans, path = "~/github/Tejon_Functional_Traits/Figures/ggeffects_graphs", height = 7, width = 10)
 
 ```
-#### b. adding significance
+### b. adding significance
+
+##### i. creating a function
 ```{r}
-# creating a function
 funct_graph <- function(model, model_terms, title, y_lab, x_lab){
   
   predict <- ggpredict(model, terms = model_terms)
@@ -189,9 +190,11 @@ funct_graph <- function(model, model_terms, title, y_lab, x_lab){
   labs(title = title, y = y_lab, x = x_lab) +
   facet_grid(~ group)
 }
+```
 
-# leaf area
-# making annotation files
+##### ii. Leaf Area
+```{r}
+# making annotation file
 anno <- as.data.frame(summary(emmeans(funct_la, specs = pairwise ~ climate + treatment + functional_group))$contrasts) %>%
   filter(p.value <= 0.05) %>% 
   separate(col = contrast, into = c("plot_1", "plot_2"), sep = " - ") %>% 
@@ -204,6 +207,7 @@ anno <- as.data.frame(summary(emmeans(funct_la, specs = pairwise ~ climate + tre
                                ifelse(p.value <= 0.001, "***", "****")))) %>% 
   dplyr::select(group, start, end, label, climate)
 
+# splitting up by climate
 arid_anno <- anno %>% 
   filter(climate == "Arid")
 int_anno <- anno %>% 
@@ -211,6 +215,7 @@ int_anno <- anno %>%
 mesic_anno <- anno %>% 
   filter(climate == "Mesic")
 
+# graphing
 funct_graph(model = funct_la, 
             model_terms = c("climate", "functional_group", "treatment"),
             title = "Leaf Area CWM by Functional Group",
@@ -232,7 +237,12 @@ funct_graph(model = funct_la,
     color = "#74add1",
     manual = TRUE)
 
-# specific leaf area
+```
+
+##### iii. Specific Leaf Area
+```{r}
+# no significant differences to annotate
+
 # anno <- as.data.frame(summary(emmeans(funct_sla, specs = pairwise ~ climate + treatment + functional_group))$contrasts) %>%
 #   filter(p.value <= 0.05) %>% 
 #   separate(col = contrast, into = c("plot_1", "plot_2"), sep = " - ") %>% 
@@ -251,7 +261,11 @@ funct_graph(model = funct_sla,
             y_lab = "Predicted log(CWM Specific Leaf Area + 1)",
             x_lab = "Herbivore Treatment")
 
-# ldmc
+```
+
+##### iv. Leaf Dry Matter Content
+```{r}
+# creating annotations
 anno <- as.data.frame(summary(emmeans(funct_ldmc, specs = pairwise ~ climate + treatment + functional_group))$contrasts) %>%
   filter(p.value <= 0.05) %>%
   separate(col = contrast, into = c("plot_1", "plot_2"), sep = " - ") %>%
@@ -263,8 +277,8 @@ anno <- as.data.frame(summary(emmeans(funct_ldmc, specs = pairwise ~ climate + t
                         ifelse(p.value <= 0.01, "**",
                                ifelse(p.value <= 0.001, "***", "****")))) %>%
   dplyr::select(group, start, end, label, climate)
-anno
 
+# splitting anootation by climate
 arid_anno <- anno %>% 
   filter(climate == "Arid")
 int_anno <- anno %>% 
@@ -272,6 +286,7 @@ int_anno <- anno %>%
 mesic_anno <- anno %>% 
   filter(climate == "Mesic")
 
+# graphing
 funct_graph(model = funct_ldmc, 
             model_terms = c("climate", "functional_group", "treatment"),
             title = "Leaf Dry Matter Content CWM by Functional Group",
@@ -294,7 +309,85 @@ funct_graph(model = funct_ldmc,
     manual = TRUE)
 ```
 
-#### 3. sjPlot [NOT USING]
+##### vi. Seed Mass
+```{r}
+# model does not contain treatment
+
+anno <- as.data.frame(summary(emmeans(funct_seed_mass, specs = pairwise ~ climate + functional_group))$contrasts) %>%
+  filter(p.value <= 0.05) %>%
+  separate(col = contrast, into = c("plot_1", "plot_2"), sep = " - ") %>%
+  separate(col = plot_1, into = c("plot_1_climate", "plot_1_funct_group"), sep = ",") %>%
+  separate(col = plot_2, into = c("plot_2_climate", "plot_2_funct_group"), sep = ",") %>%
+  filter(plot_1_funct_group == plot_2_funct_group) %>%
+  rename(group = plot_2_funct_group, start = plot_1_climate, end = plot_2_climate) %>%
+  mutate(label = ifelse(p.value > .05, "*",
+                        ifelse(p.value <= 0.01, "**",
+                               ifelse(p.value <= 0.001, "***", "****")))) %>%
+  dplyr::select(group, start, end, label)
+anno
+
+predict <- ggpredict(funct_seed_mass, terms = c("climate", "functional_group"))
+test <- as.data.frame(predict)
+test
+
+ggplot(test, aes(x, predicted)) +
+  geom_point(position = position_dodge(width=0.5),
+             aes(color = x)) +
+  geom_errorbar(aes(ymin = conf.low, ymax = conf.high, color = x), 
+                width = .25, 
+                size = .75,
+                position = position_dodge(width=0.5))+
+  scale_color_manual(values = ggeffects_colors) +
+  theme(
+    panel.background = element_rect(fill = "white",
+                                    colour = "white",
+                                    size = 0.5, linetype = "solid"),
+    panel.grid.major = element_line(size = 0.5, linetype = 'solid',
+                                    colour = "gray90"),
+    panel.grid.minor = element_line(size = 0.25, linetype = 'solid',
+                                    colour = "gray90"),
+    axis.line = element_line(size = 0.5, linetype = "solid",
+                             colour = "gray85"),
+    strip.background = element_rect(fill = "gray85"),
+    strip.text = element_text(colour = 'gray20')
+  ) +
+  labs(title = "Functional Group Seed Mass CWM", y = "Predicted log(Seed Mass CWM)", x = "Climate") +
+  geom_signif(
+    data = anno,
+    aes(xmin = start, xmax = end, annotations = label, y_position = c(-1, -.5, .5, 1, .5, 1)),
+    manual = TRUE) +
+  facet_grid(~ group)
+
+
+```
+
+##### vii. LNC
+```{r}
+# no significant differences to annotate
+
+# # creating annotations
+# anno <- as.data.frame(summary(emmeans(funct_n, specs = pairwise ~ climate + treatment + functional_group))$contrasts) %>%
+#   filter(p.value <= 0.05) %>%
+#   separate(col = contrast, into = c("plot_1", "plot_2"), sep = " - ") %>%
+#   separate(col = plot_1, into = c("plot_1_climate", "plot_1_treatment", "plot_1_funct_group"), sep = ",") %>%
+#   separate(col = plot_2, into = c("plot_2_climate", "plot_2_treatment", "plot_2_funct_group"), sep = ",") %>%
+#   filter(plot_1_funct_group == plot_2_funct_group & plot_1_climate == plot_2_climate) %>%
+#   rename(group = plot_2_funct_group, start = plot_1_treatment, end = plot_2_treatment, climate = plot_1_climate) %>%
+#   mutate(label = ifelse(p.value > .05, "*",
+#                         ifelse(p.value <= 0.01, "**",
+#                                ifelse(p.value <= 0.001, "***", "****")))) %>%
+#   dplyr::select(group, start, end, label, climate)
+
+funct_graph(model = funct_n, 
+            model_terms = c("climate", "functional_group", "treatment"),
+            title = "Leaf Nitrogen Concentration CWM by Functional Group",
+            y_lab = "Predicted log(Leaf Nitrogen Concentration CWM + 1)",
+            x_lab = "Herbivore Treatment")
+
+
+```
+
+## 3. sjPlot [NOT USING]
 ```{r}
 # library(sjPlot)
 # 
